fix(site-header): fix alignment of logo with title
Caused by by new font file, may have different line height base

--- a/_stylesheets/_site-header.css
+++ b/_stylesheets/_site-header.css
@@ -35,6 +35,8 @@
   margin-top: 0;
   font-weight: var(--font-weight-bold);
   font-size: var(--font-size-l);
+  position: relative;
+  bottom: 0.044191082em;
 
   display: none;
 
